--- a/rules/ecs.yaml
+++ b/rules/ecs.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
@@ -8,91 +9,65 @@ metadata:
   namespace: monitoring
 spec:
   groups:
-  - name: ecs.rules
-    rules:
-    - alert: AwsCloudwatchECSCPUUtilization
-      annotations:
-        summary: ECS Service CPU Utilizatiom is above 90 percent
-        description: ECS Service CPU Utilizatiom is {{$value}}% for ECS Cluster {{
-          $labels.dimension_ClusterName }} and service {{ $labels.dimension_ServiceName
-          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
-          }} region {{ $labels.overwrite_aws_region }}
-        runbook_url: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/troubleshooting.html
-      expr: round(aws_cloudwatch_ECS_CPUUtilization_ClusterName_ServiceName) > 90
-      for: 60m
-      labels:
-        rule_source: opswatch-prometheus-rules
-        severity: warning
-    - alert: AwsCloudwatchECSMemoryUtilization
-      annotations:
-        summary: ECS Service Memory Utilizatiom is above 90 percent
-        description: ECS Service Memory Utilizatiom is {{$value}}% for ECS Cluster
-          {{ $labels.dimension_ClusterName }} and service {{ $labels.dimension_ServiceName
-          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
-          }} region {{ $labels.overwrite_aws_region }}
-        runbook_url: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/troubleshooting.html
-      expr: round(aws_cloudwatch_ECS_MemoryUtilization_ClusterName_ServiceName) >
-        90
-      for: 15m
-      labels:
-        rule_source: opswatch-prometheus-rules
-        severity: warning
-    - alert: AwsCloudwatchECSInsightsTaskCount
-      annotations:
-        summary: ECS Service has less running tasks than desired
-        description: ECS Service has less running tasks than desired for ECS Cluster
-          {{ $labels.dimension_ClusterName }} and service {{ $labels.dimension_ServiceName
-          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
-          }} region {{ $labels.overwrite_aws_region }}
-        runbook_url: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/troubleshooting.html
-      expr: aws_cloudwatch_ECSContainerInsights_RunningTaskCount_ClusterName_ServiceName
-        < aws_cloudwatch_ECSContainerInsights_DesiredTaskCount_ClusterName_ServiceName
-      for: 30m
-      labels:
-        rule_source: opswatch-prometheus-rules
-        severity: warning
-    - alert: AwsCloudwatchECSInsightsEphemeralStorageUtilization
-      annotations:
-        summary: ECS Service Ephemeral Storage Utilization is above 90 percent
-        description: ECS Service Ephemeral Storage Utilizatiom is {{$value}}% for
-          ECS Cluster {{ $labels.dimension_ClusterName }} and service {{ $labels.dimension_ServiceName
-          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
-          }} region {{ $labels.overwrite_aws_region }}
-        runbook_url: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/troubleshooting.html
-      expr: aws_cloudwatch_ECSContainerInsights_EphemeralStorageUtilized_ClusterName_ServiceName
-        / aws_cloudwatch_ECSContainerInsights_EphemeralStorageReserved_ClusterName_ServiceName
-        * 100 > 90
-      for: 15m
-      labels:
-        rule_source: opswatch-prometheus-rules
-        severity: warning
-    - alert: AwsCloudwatchECSInsightsMemoryUtilization
-      annotations:
-        summary: ECS Service Memory Utilization is above 90 percent
-        description: ECS Service Memory Utilizatiom is {{$value}}% for ECS Cluster
-          {{ $labels.dimension_ClusterName }} and service {{ $labels.dimension_ServiceName
-          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
-          }} region {{ $labels.overwrite_aws_region }}
-        runbook_url: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/troubleshooting.html
-      expr: aws_cloudwatch_ECSContainerInsights_MemoryUtilized_ClusterName_ServiceName
-        / aws_cloudwatch_ECSContainerInsights_MemoryReserved_ClusterName_ServiceName
-        * 100 > 90
-      for: 15m
-      labels:
-        rule_source: opswatch-prometheus-rules
-        severity: warning
-    - alert: AwsCloudwatchECSInsightsCPUUtilization
-      annotations:
-        summary: ECS Service CPU Utilization is above 90 percent
-        description: ECS Service CPU Utilizatiom is {{$value}}% for ECS Cluster {{
-          $labels.dimension_ClusterName }} and service {{ $labels.dimension_ServiceName
-          }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id
-          }} region {{ $labels.overwrite_aws_region }}
-        runbook_url: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/troubleshooting.html
-      expr: aws_cloudwatch_ECSContainerInsights_CpuUtilized_ClusterName_ServiceName
-        / aws_cloudwatch_ECSContainerInsights_CpuReserved_ClusterName_ServiceName
-        * 100 > 90
-      for: 15m
-      labels:
-        rule_source: opswatch-prometheus-rules
-        severity: warning
+    - name: ecs.rules
+      rules:
+        - alert: AwsCloudwatchECSCPUUtilization
+          annotations:
+            summary: ECS Service CPU Utilizatiom is above 90 percent
+            description: ECS Service CPU Utilizatiom is {{$value}}% for ECS Cluster {{ $labels.dimension_ClusterName }} and service {{ $labels.dimension_ServiceName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+            runbook_url: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/troubleshooting.html
+          expr: round(aws_cloudwatch_ECS_CPUUtilization_ClusterName_ServiceName) > 90
+          for: 60m
+          labels:
+            rule_source: opswatch-prometheus-rules
+            severity: warning
+        - alert: AwsCloudwatchECSMemoryUtilization
+          annotations:
+            summary: ECS Service Memory Utilizatiom is above 90 percent
+            description: ECS Service Memory Utilizatiom is {{$value}}% for ECS Cluster {{ $labels.dimension_ClusterName }} and service {{ $labels.dimension_ServiceName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+            runbook_url: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/troubleshooting.html
+          expr: round(aws_cloudwatch_ECS_MemoryUtilization_ClusterName_ServiceName) > 90
+          for: 15m
+          labels:
+            rule_source: opswatch-prometheus-rules
+            severity: warning
+        - alert: AwsCloudwatchECSInsightsTaskCount
+          annotations:
+            summary: ECS Service has less running tasks than desired
+            description: ECS Service has less running tasks than desired for ECS Cluster {{ $labels.dimension_ClusterName }} and service {{ $labels.dimension_ServiceName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+            runbook_url: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/troubleshooting.html
+          expr: aws_cloudwatch_ECSContainerInsights_RunningTaskCount_ClusterName_ServiceName < aws_cloudwatch_ECSContainerInsights_DesiredTaskCount_ClusterName_ServiceName
+          for: 30m
+          labels:
+            rule_source: opswatch-prometheus-rules
+            severity: warning
+        - alert: AwsCloudwatchECSInsightsEphemeralStorageUtilization
+          annotations:
+            summary: ECS Service Ephemeral Storage Utilization is above 90 percent
+            description: ECS Service Ephemeral Storage Utilizatiom is {{$value}}% for ECS Cluster {{ $labels.dimension_ClusterName }} and service {{ $labels.dimension_ServiceName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+            runbook_url: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/troubleshooting.html
+          expr: aws_cloudwatch_ECSContainerInsights_EphemeralStorageUtilized_ClusterName_ServiceName / aws_cloudwatch_ECSContainerInsights_EphemeralStorageReserved_ClusterName_ServiceName * 100 > 90
+          for: 15m
+          labels:
+            rule_source: opswatch-prometheus-rules
+            severity: warning
+        - alert: AwsCloudwatchECSInsightsMemoryUtilization
+          annotations:
+            summary: ECS Service Memory Utilization is above 90 percent
+            description: ECS Service Memory Utilizatiom is {{$value}}% for ECS Cluster {{ $labels.dimension_ClusterName }} and service {{ $labels.dimension_ServiceName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+            runbook_url: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/troubleshooting.html
+          expr: aws_cloudwatch_ECSContainerInsights_MemoryUtilized_ClusterName_ServiceName / aws_cloudwatch_ECSContainerInsights_MemoryReserved_ClusterName_ServiceName * 100 > 90
+          for: 15m
+          labels:
+            rule_source: opswatch-prometheus-rules
+            severity: warning
+        - alert: AwsCloudwatchECSInsightsCPUUtilization
+          annotations:
+            summary: ECS Service CPU Utilization is above 90 percent
+            description: ECS Service CPU Utilizatiom is {{$value}}% for ECS Cluster {{ $labels.dimension_ClusterName }} and service {{ $labels.dimension_ServiceName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+            runbook_url: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/troubleshooting.html
+          expr: aws_cloudwatch_ECSContainerInsights_CpuUtilized_ClusterName_ServiceName / aws_cloudwatch_ECSContainerInsights_CpuReserved_ClusterName_ServiceName * 100 > 90
+          for: 15m
+          labels:
+            rule_source: opswatch-prometheus-rules
+            severity: warning
