--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,18 @@
+---
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
-    hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v2.3.0
+  hooks:
+  - id: check-yaml
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
+# - repo: https://github.com/adrienverge/yamllint.git
+#   rev: v1.21.0
+#   hooks:
+#       - id: yamllint
+#         args: [--format, parsable, --strict]
+# - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
+#   rev: 0.2.1
+#   hooks:
+#   - id: yamlfmt
+#     args: [--mapping, '2', --sequence, '2', --offset, '0', --colons, --width, '150']
