--- a/rules/elasticsearch.yaml
+++ b/rules/elasticsearch.yaml
@@ -19,14 +19,14 @@ spec:
           labels:
             rule_source: opswatch-prometheus-rules
             severity: warning
-          expr: round(predict_linear(aws_cloudwatch_ES_FreeStorageSpace_ClientId_DomainName_min[30m], 3600 * 2) / 1024, 0.1) < 10
+          expr: round(predict_linear(aws_cloudwatch_ES_FreeStorageSpace_ClientId_DomainName_min[4h], 3600 * 2) / 1024, 0.1) < 5
           for: 30m
         - alert: AwsCloudwatchElasticSearchFilesystemDataFree
           annotations:
             summary: ElasticSearch Cluster free storage space below 5GB
             description: ElasticSearch Cluster free storage space is {{$value}}GB for domain {{ $labels.dimension_DomainName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://docs.aws.amazon.com/opensearch-service/latest/developerguide/handling-errors.html
-          expr: round(aws_cloudwatch_ES_FreeStorageSpace_ClientId_DomainName_min / 1024, 0.1) < 5
+          expr: round(aws_cloudwatch_ES_FreeStorageSpace_ClientId_DomainName_min / 1024, 0.1) < 2.5
           for: 30m
           labels:
             rule_source: opswatch-prometheus-rules
