--- a/rules/elasticsearch.yaml
+++ b/rules/elasticsearch.yaml
@@ -104,10 +104,10 @@ spec:
             severity: warning
         - alert: AwsCloudwatchElasticSearchErrorRate4xx
           annotations:
-            summary: Elasticsearch Cluster 4xx error rate is
-            description: ElasticSearch Cluster Connection 4xx error rate is {{$value}} for domain {{ $labels.dimension_DomainName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+            summary: Elasticsearch Cluster 4xx error rate is greater than 30%
+            description: ElasticSearch Cluster Connection 4xx error rate is {{$value}}% for domain {{ $labels.dimension_DomainName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://docs.aws.amazon.com/opensearch-service/latest/developerguide/handling-errors.html
-          expr: rate(aws_cloudwatch_ES_4xx_ClientId_DomainName_sum[30m])/(rate(aws_cloudwatch_ES_2xx_ClientId_DomainName_sum[30m]) + rate(aws_cloudwatch_ES_3xx_ClientId_DomainName_sum[30m]) + rate(aws_cloudwatch_ES_4xx_ClientId_DomainName_sum[30m]) + rate(aws_cloudwatch_ES_5xx_ClientId_DomainName_sum[30m]))*100
+          expr: rate(aws_cloudwatch_ES_4xx_ClientId_DomainName_sum[30m])/(rate(aws_cloudwatch_ES_2xx_ClientId_DomainName_sum[30m]) + rate(aws_cloudwatch_ES_3xx_ClientId_DomainName_sum[30m]) + rate(aws_cloudwatch_ES_4xx_ClientId_DomainName_sum[30m]) + rate(aws_cloudwatch_ES_5xx_ClientId_DomainName_sum[30m]))*100 > 30
           for: 45m
           labels:
             rule_source: opswatch-prometheus-rules
@@ -115,10 +115,10 @@ spec:
             alarm_class: REACTIVE
         - alert: AwsCloudwatchElasticSearchErrorRate5xx
           annotations:
-            summary: Elasticsearch Cluster 5xx error rate is
-            description: ElasticSearch Cluster Connection 5xx error rate is {{$value}} for domain {{ $labels.dimension_DomainName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+            summary: Elasticsearch Cluster 5xx error rate is greater than 20%
+            description: ElasticSearch Cluster Connection 5xx error rate is {{$value}}% for domain {{ $labels.dimension_DomainName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://docs.aws.amazon.com/opensearch-service/latest/developerguide/handling-errors.html
-          expr: rate(aws_cloudwatch_ES_5xx_ClientId_DomainName_sum[30m])/(rate(aws_cloudwatch_ES_2xx_ClientId_DomainName_sum[30m]) + rate(aws_cloudwatch_ES_3xx_ClientId_DomainName_sum[30m]) + rate(aws_cloudwatch_ES_4xx_ClientId_DomainName_sum[30m]) + rate(aws_cloudwatch_ES_5xx_ClientId_DomainName_sum[30m]))*100
+          expr: rate(aws_cloudwatch_ES_5xx_ClientId_DomainName_sum[30m])/(rate(aws_cloudwatch_ES_2xx_ClientId_DomainName_sum[30m]) + rate(aws_cloudwatch_ES_3xx_ClientId_DomainName_sum[30m]) + rate(aws_cloudwatch_ES_4xx_ClientId_DomainName_sum[30m]) + rate(aws_cloudwatch_ES_5xx_ClientId_DomainName_sum[30m]))*100 > 20
           for: 45m
           labels:
             rule_source: opswatch-prometheus-rules
