--- a/rules/rds.yaml
+++ b/rules/rds.yaml
@@ -298,7 +298,7 @@ spec:
             summary: RDS free local storage is less than 4GB
             description: RDS free local storage is {{$value}}GB for DB instance {{ $labels.dimension_DBInstanceIdentifier }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_Troubleshooting.html#CHAP_Troubleshooting.Storage
-          expr: round(aws_cloudwatch_RDS_FreeLocalStorage_DBInstanceIdentifier/(1024^3,0.1)) < 4
+          expr: round(aws_cloudwatch_RDS_FreeStorageSpace_DBInstanceIdentifier/1024^3,0.1) < 4
           for: 15m
           labels:
             rule_source: opswatch-prometheus-rules
@@ -318,7 +318,7 @@ spec:
             summary: RDS free storage is less than 2GB
             description: RDS free storage is {{$value}}GB for DB instance {{ $labels.dimension_DBInstanceIdentifier }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_Troubleshooting.html#CHAP_Troubleshooting.Storage
-          expr: round(aws_cloudwatch_RDS_FreeStorageSpace_DBInstanceIdentifier/(1024^3,0.1)) < 2
+          expr: round(aws_cloudwatch_RDS_FreeStorageSpace_DBInstanceIdentifier/1024^3,0.1) < 2
           for: 15m
           labels:
             rule_source: opswatch-prometheus-rules
