--- a/.github/workflows/check-rules.yaml
+++ b/.github/workflows/check-rules.yaml
@@ -60,8 +60,20 @@ jobs:
         mkdir -p test/rules
         find rules -name "*.yaml"  | awk '{ print "cat " $1 " | yq .spec > test/"$1 }' | sh
         ls -la test/rules
+    - name: Finding files
+      id: finding-files        
+      run: |
+        {
+          cd ${{ github.workspace }}/test
+          echo 'FILELIST<<EOF'
+          find . -name '*.md' -print 
+          echo EOF
+        } >> "$GITHUB_ENV"
     - name: Check files using promtool
       run: |
         cd ${{ github.workspace }}/test
-        find . -name "*.yaml" -type f -exec promtool check rules {} \;
+        for i in $FILELIST; do
+          echo "Checking file ${i}"
+          promtool check rules ${i}"
+        done  
     - run: echo "🍏 This job's status is ${{ job.status }}."
